second commit on index.html and first on aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Learning github</h1>
-    <h1>add something new</h1>
+    <h1>my page</h1>
 </body>
 </html>
